# DDC-Matter

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  idf_component.yml  partitions.csv  plan.txt  sdkconfig.defaults
.github/workflows/: pages.yml
frontend/: index.html
main/: CMakeLists.txt  app_main.cpp  config.c  config.h  ddc.c  ddc.h  debug_serial_app.cpp  edid.c  edid.h  matter.cpp  matter.h  mccs.c  mccs.h  monitor_db.c  monitor_db.h  webserver.c  webserver.h
scripts/: dev-init.sh  run-pages-workflow-local.sh  serial_debug.py  stage-web-installer.sh
web-installer/: index.html  manifest.json
